Fix popup class and add z-index

--- a/public/styles/dashboard.css
+++ b/public/styles/dashboard.css
@@ -11,13 +11,14 @@ body {
 /*
  * Sidebar
  */
- 
+
 .popup-alert {
   position: fixed;
   width: 20%;
   top: 0;
   left: 50%;
   margin-left: -10%; /* Negative half of width. */
+  z-index: 1050;
 }
 
 .sidebar {
