--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -13,6 +13,7 @@ body {
   top: 0;
   left: 50%;
   margin-left: -10%; /* Negative half of width. */
+  z-index: 1050;
 }
 
 .form-signin {
